--- a/UrlShortener.WebApp/wwwroot/css/site.css
+++ b/UrlShortener.WebApp/wwwroot/css/site.css
@@ -196,3 +196,18 @@ input:checked + .slider:before {
     display: flex;
     align-items: center;
 }
+
+.result-link {
+    display: block;
+    flex-grow: 1;
+    height: 60px;
+    padding: 15px;
+    background-color: #fff; 
+    border: 1px solid #000;
+    border-radius: 20px;
+    text-decoration: none;
+    color: var(--primary-text-color);
+    font-size: 16px;
+    line-height: 30px; 
+    text-align: left;
+}
