--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,45 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #eef1da;
+  height: 100px;
+  padding: 0 40px;
+  box-sizing: border-box;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.navbar-left,
+.navbar-right {
+  display: flex;
+  align-items: center;
+  gap: 30px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-brand {
+  text-decoration: none;
+  color: #1d4360;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #000;
+  font-family: "Mplus 1p Bold";
+  font-size: 48px;
+  font-weight: 700;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.nav-link {
+  text-decoration: none;
+  color: #1d4360;
+  font-size: 20px;
+  font-weight: 500;
+  padding-bottom: 5px;
 }
 
-.card {
-  padding: 2em;
+.nav-link:hover {
+  text-decoration: underline;
+  text-underline-offset: 8px;
 }
 
-.read-the-docs {
-  color: #888;
+.separator {
+  color: #1d4360;
+  font-size: 20px;
+  font-weight: 500;
 }
